add new file to rl

--- a/plays_for_RL.ipynb
+++ b/plays_for_RL.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Non-ASCII character '\\xd0' in file bots/botDenis.py on line 1, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details (botDenis.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"bots/botDenis.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    import sys #импортируем библиотеку sys\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m Non-ASCII character '\\xd0' in file bots/botDenis.py on line 1, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "import scipy.stats as sps\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -118,6 +109,19 @@
     "#     return pd.DataFrame(players_stack_dict)\n",
     "\n",
     "# res = get_all_results(config, n_games=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "cur = sys.stdout\n",
+    "sys.stdout = open('/dev/stdout', 'w')"
    ]
   },
   {
